# tensorform

./: .coverage  README.md  pyproject.toml
benchmarks/audio/: _bench_core.py  bench_cqt.py  bench_gammatone.py  bench_mel.py  bench_mfcc.py  bench_scaling.py  compare_cqt.py  compare_mel.py  compare_mfcc.py  cqt_celeb_vox.py  gammatone_celeb_vox.py  mel_celeb_vox.py  melt_celeb_vox.py  mfcc_celeb_vox.py  mfcct_celeb_vox.py  run_all.py
benchmarks/results/: bench_cqt_newton_Apple_Silicon_Integrated_GPU.txt  bench_cqt_power_NVIDIA_H100_80GB_HBM3.txt  bench_mel_newton_Apple_Silicon_Integrated_GPU.txt  bench_mel_power_NVIDIA_H100_80GB_HBM3.txt  bench_mfcc_newton_Apple_Silicon_Integrated_GPU.txt  bench_mfcc_power_NVIDIA_H100_80GB_HBM3.txt  cqt_newton_Apple_Silicon_Integrated_GPU_bench.txt  gammatone_newton_Apple_Silicon_Integrated_GPU_bench.txt  mel_newton_Apple_Silicon_Integrated_GPU_bench.txt  melt_newton_Apple_Silicon_Integrated_GPU_bench.txt  mfcc_newton_Apple_Silicon_Integrated_GPU_bench.txt  mfcct_newton_Apple_Silicon_Integrated_GPU_bench.txt  scaling_cqt_neo_Apple_Silicon_Integrated_GPU.csv  scaling_cqt_neo_Apple_Silicon_Integrated_GPU.txt  scaling_cqt_neo_Apple_Silicon_Integrated_GPU_files.txt  scaling_cqt_newton_Apple_Silicon_Integrated_GPU.csv  scaling_cqt_newton_Apple_Silicon_Integrated_GPU.txt  scaling_cqt_newton_Apple_Silicon_Integrated_GPU_files.txt  scaling_cqt_power_NVIDIA_H100_80GB_HBM3.csv  scaling_cqt_power_NVIDIA_H100_80GB_HBM3.txt  scaling_cqt_power_NVIDIA_H100_80GB_HBM3_files.txt  scaling_cqt_tossal_Tesla_V100-SXM2-32GB.csv  scaling_cqt_tossal_Tesla_V100-SXM2-32GB.txt  scaling_cqt_tossal_Tesla_V100-SXM2-32GB_files.txt  (+36 more)
docs/: session-2026-06-03.md
tests/: test_audio_cqt.py  test_audio_gammatone.py  test_audio_mel.py  test_audio_melt.py  test_audio_mfcc.py  test_audio_mfcct.py
(+24 files in other folders)
