[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorform"
version = "0.2.0-alpha.1"
description = "Hardware-Aligned Computational (HAC) for Scientific Pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Augusto Cesar de Camargo Neto", email = "augusto.camargo@bluecore.it" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["hac", "accelerator-native", "tensor", "hpc", "signal-processing", "mps", "cuda"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.22.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/augustocamargo/TensorForm"
Documentation = "https://github.com/augustocamargo/TensorForm/docs"
Repository = "https://github.com/augustocamargo/TensorForm.git"
Issues = "https://github.com/augustocamargo/TensorForm/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
nvidia = [
    "pynvml>=11.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=tensorform"
testpaths = ["tests"]